Rename stream demonstration classes and update README for clarity